--- a/src/app/app.css
+++ b/src/app/app.css
@@ -125,7 +125,8 @@
 
 .start {
   grid-column: 1/3;
-  max-width: 100%;
+  width: 100%;
+  max-width: 360px;
   height: 140px;
   display: flex;
   flex-direction: column;
@@ -142,16 +143,23 @@
 
 .startInput {
   width: 350px;
-  width: 100%;
+  max-width: 100%;
   height: 56px;
   padding: 0.5rem 1rem;
   border: none;
   font-size: 1.2rem;
   text-align: center;
+  transition: all 0.1s;
 }
 
-.startInput:focus {
-  outline: none;
+.startInput::placeholder {
+  color: #411141;
+}
+
+.startInput:focus,
+.startInput:hover {
+  outline: 4px dashed #ee82ee;
+  background: #ffd5ff;
 }
 
 .startButton {
@@ -164,6 +172,7 @@
   text-align: center;
   cursor: pointer;
   text-transform: uppercase;
+  background-color: #ee82ee;
 }
 
 .restart {
